syntax = "proto3";

option go_package = "/pb";

service InformanteBrokerService {
    rpc AddCityToBroker (AddCityToBrokerRequest) returns (AddCityToBrokerReply) {}
    rpc DeleteCityToBroker (DeleteCityToBrokerRequest) returns (DeleteCityToBrokerReply);
    rpc UpdateNameToBroker (UpdateNameToBrokerRequest) returns (UpdateNameToBrokerReply);
    rpc UpdateNumberToBroker (UpdateNumberToBrokerRequest) returns (UpdateNumberToBrokerReply);
}

// The request message  the user's name.
message AddCityToBrokerRequest {
    string nombre_planeta = 1;
    string nombre_ciudad = 2;
    int32 cantidad_soldados_rebeldes = 3;
}

message AddCityToBrokerReply {
    bool state = 1;
}

// The request message  the user's name.
message DeleteCityToBrokerRequest {
    string nombre_planeta = 1;
    string nombre_ciudad = 2;
    int32 cantidad_soldados_rebeldes = 3;
}

message DeleteCityToBrokerReply {
    bool state = 1;
}

// The request message  the user's name.
message UpdateNameToBrokerRequest {
    string nombre_planeta = 1;
    string nombre_ciudad = 2;
    int32 cantidad_soldados_rebeldes = 3;
}

message UpdateNameToBrokerReply {
    bool state = 1;
}

// The request message  the user's name.
message UpdateNumberToBrokerRequest {
    string nombre_planeta = 1;
    string nombre_ciudad = 2;
    int32 cantidad_soldados_rebeldes = 3;
}

message UpdateNumberToBrokerReply {
    bool state = 1;
}